# quicken-mcp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test_server.py  workplan.md
app/: __init__.py  config.py  main.py  mcp_tools.py  qif_loader.py  schema.sql  server.py
